問い合わせボタン作成

--- a/pages/mailform.html
+++ b/pages/mailform.html
@@ -9,21 +9,25 @@
     <body>
         <div id="page">
             <article class="articleDetail">
-                <header class="articleDetailHead">
-                    <h1 class="pageTitle">問い合わせ</h1>
-                </header>
-            </article>
+                    <header class="articleDetailHead">
+                        <h1 class="pageTitle">問い合わせ</h1>
+                    </header>
 
-            <div id="pageHead">
-                <nav class="globalNavi">
-                    <ul>
-                        <li><a href="../index.html">ホーム</a></li>
-                        <li><a href="./contents.html">作品</a></li>
-                        <li><a href="./gallery.html">ギャラリー</a></li>
-                        <li class="current"><a href="./mailform.html">問い合わせ</a></li>
-                    </ul>
-                </nav>
-            </div>
+                <div id="pageHead">
+                    <nav class="globalNavi">
+                        <ul>
+                            <li><a href="../index.html">ホーム</a></li>
+                            <li><a href="./contents.html">作品</a></li>
+                            <li><a href="./gallery.html">ギャラリー</a></li>
+                            <li class="current"><a href="./mailform.html">問い合わせ</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div id="mailform">
+                    <!--問い合わせフォーム-->
+                    <p class="btn"><a href="#">お問い合わせ</a></p>
+                </div>
+            </article>
         </div>
     </body>
 </html>
