デザインちょっと修正

--- a/pages/contents.html
+++ b/pages/contents.html
@@ -10,20 +10,21 @@
         <div id="page">
             <article class="articleDetail">
                 <header class="articleDetailHead">
-                    <h1 class="pageTitle">作品一覧</h1>
+                    <h1 class="circlename">Flash Branch</h1>
                 </header>
-            </article>
 
-            <div id="pageHead">
-                <nav class="globalNavi">
-                    <ul>
-                        <li><a href="../index.html">ホーム</a></li>
-                        <li class="current"><a href="./contents.html">作品</a></li>
-                        <li><a href="./gallery.html">ギャラリー</a></li>
-                        <li><a href="./mailform.html">問い合わせ</a></li>
-                    </ul>
-                </nav>
-            </div>
+                <div id="pageHead">
+                    <nav class="globalNavi">
+                        <ul>
+                            <li><a href="../index.html">ホーム</a></li>
+                            <li class="current"><a href="./contents.html">作品</a></li>
+                            <li><a href="./gallery.html">ギャラリー</a></li>
+                            <li><a href="./mailform.html">問い合わせ</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <h1 class="pageTitle">作品</h1>
+            </article>
         </div>
     </body>
 </html>
