--- a/pages/mailform.html
+++ b/pages/mailform.html
@@ -9,21 +9,22 @@
     <body>
         <div id="page">
             <article class="articleDetail">
-                    <header class="articleDetailHead">
-                        <h1 class="pageTitle">問い合わせ</h1>
-                    </header>
-
-                <div id="pageHead">
-                    <nav class="globalNavi">
-                        <ul>
-                            <li><a href="../index.html">ホーム</a></li>
-                            <li><a href="./contents.html">作品</a></li>
-                            <li><a href="./gallery.html">ギャラリー</a></li>
-                            <li class="current"><a href="./mailform.html">問い合わせ</a></li>
-                        </ul>
-                    </nav>
-                </div>
+                <header class="articleDetailHead">
+                    <h1 class="circlename">Flash Branch</h1>
+                </header>
+                    <div id="pageHead">
+                        <nav class="globalNavi">
+                            <ul>
+                                <li><a href="../index.html">ホーム</a></li>
+                                <li><a href="./contents.html">作品</a></li>
+                                <li><a href="./gallery.html">ギャラリー</a></li>
+                                <li class="current"><a href="./mailform.html">問い合わせ</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                <h1 class="pageTitle">問い合わせ</h1>
                 <div id="mailform">
+                    お問い合わせは以下のボタンからどうぞ(google formに飛びます)
                     <!--問い合わせフォーム-->
                     <p class="btn"><a href="#">お問い合わせ</a></p>
                 </div>
