--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -23,8 +23,19 @@
                         </ul>
                     </nav>
                 </div>
-                <h1 class="pageTitle">ギャラリー</h1>
             </article>
+
+            <div id="pageBody">
+                <h1 class="pageTitle">ギャラリー</h1>
+                <article>
+                    <div id="popup">
+                        <a href="../images/sora-min.JPG"><img src="../images/sora-min.JPG" width="400"></a>
+
+                        <img src="../images/yuuyake-min.JPG" width="400">
+
+                    </div>
+                </article>
+            </div>
         </div>
     </body>
 </html>
