--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <title>Flash Branch</title>
         <link rel="stylesheet" href="../css/home_style.css">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -28,14 +31,17 @@
             <div id="pageBody">
                 <h1 class="pageTitle">ギャラリー</h1>
                 <article>
-                    <div id="popup">
-                        <a href="../images/sora-min.JPG"><img src="../images/sora-min.JPG" width="400"></a>
-
-                        <img src="../images/yuuyake-min.JPG" width="400">
-
+                    <div id="popup" class="popupimg">
+                        <a href="../images/sora-min.JPG" data-lightbox="group"><img src="../images/sora-min.JPG" width="400"></a>
+                        <a href="../images/yuuyake-min.JPG" data-lightbox="group"><img src="../images/yuuyake-min.JPG" width="400"></a>
                     </div>
+<!--                    <div id="popup-background">-->
+<!--                    </div>-->
+<!--                    <img id="popup-item" src="" />-->
+
                 </article>
             </div>
         </div>
+<!--        <script src="../js/popup.js"></script>-->
     </body>
 </html>
